# PeakOS

./: .dockerignore  .gitignore  ANALYSIS.md  Cargo.toml  Dockerfile.x86_test  LICENSE  PEAKUI_README.md  PeakUI-Assessment.md  README.md  THIRD_PARTY_NOTICES.md  build_log.txt  convert_icon.py  generate_click.py  generate_icons.py
.peak/: neural_state.json
crates/modes/desktop/: Cargo.toml  INSTALL.md  Trunk.toml  index.html  rodio_tree.txt  tree_features.txt  u00261  wasm_full_tree.txt
crates/modes/desktop/src/: audio.rs  layer_app.rs  main.rs  recorder.rs
crates/modes/desktop/src/app/: init.rs  mod.rs  mod.rs_snippet_tmp  state.rs  update.rs  view.rs  view_desktop.rs  window_handling.rs
crates/modes/desktop/src/components/: app_grid.rs  desktop.rs  desktop_container.rs  inspector.rs  login.rs  mod.rs  omnibar.rs  sidebar.rs  spaces_strip.rs  vapor_grid.rs  window_compositor.rs  wizard.rs
crates/modes/desktop/src/pages/: settings.rs
crates/modes/desktop/src/systems/: window_manager.rs
crates/modes/mobile/: Cargo.toml
crates/modes/mobile/src/: lib.rs  main.rs  view_mobile.rs
crates/modes/smarthome/: Cargo.toml
crates/modes/smarthome/src/: lib.rs
crates/peak-apps/: Cargo.toml
crates/peak-apps/src/: auth.rs  browser.rs  browser_app.rs  editor.rs  explorer.rs  jukebox.rs  lib.rs  library.rs  peak_ui.rs  peak_ui.rs.bak  settings.rs  store.rs  terminal.rs  wizard.rs
crates/peak-browser/: Cargo.toml
crates/peak-compositor/: Cargo.toml
crates/peak-compositor/src/: backend_winit.rs  main.rs  state.rs
crates/peak-core/: Cargo.toml
crates/peak-core/src/: app_traits.rs  icons.rs  lib.rs  models.rs  registry.rs  styles.rs
crates/peak-core/src/apps/: settings.rs  terminal.rs
crates/peak-core/src/integrations/: appimage.rs  steam.rs
crates/peak-core/src/systems/: image_loader.rs  mod.rs  scanner.rs
crates/peak-core/src/utils/: assets.rs
crates/peak-db/: Cargo.toml
crates/peak-db/src/: lib.rs
crates/peak-deploy/: build.sh  pre-build-check.sh
crates/peak-desktop/: Cargo.toml
crates/peak-drop/: Cargo.toml
crates/peak-drop/src/: discovery.rs  lib.rs  protocol.rs  transfer.rs
crates/peak-icons/: Cargo.toml
crates/peak-installer/: Cargo.toml
crates/peak-intelligence/: Cargo.toml
crates/peak-intelligence/src/: kernel.rs  lib.rs  llm.rs  main.rs  steam.rs  voice.rs
crates/peak-intelligence/src/brain/: assistant.rs  chat.rs  directory.rs  mod.rs  model.rs  plan.rs  request.rs  settings.rs  web.rs
crates/peak-intelligence/src/http/: mod.rs  native.rs  wasm.rs  web.rs
crates/peak-intelligence/src/terminal/: mod.rs
crates/peak-intelligence/src/tools/: mod.rs
crates/peak-mobile/: Cargo.toml
crates/peak-shell/: Cargo.toml
crates/peak-shell-protocol/: Cargo.toml
crates/peak-shell/src/: app_switcher.rs  dock.rs  lib.rs  menubar.rs
crates/peak-shell/src/ai/: mod.rs
crates/peak-shell/src/console/: category_bar.rs  game_rail.rs  layout.rs  mod.rs
crates/peak-shell/src/cupertino/: mod.rs
crates/peak-shell/src/redmond/: mod.rs  taskbar.rs
crates/peak-shell/src/tv/: app_rail.rs  control_center.rs  layout.rs  mod.rs
crates/peak-system/: Cargo.toml
crates/peak-system/src/: battery.rs  hardware.rs  lib.rs  network.rs
crates/peak-theme/: Cargo.toml
crates/peak-ui/: Cargo.toml  Trunk.toml  index.html
crates/peak-ui/docs/: ANALYSIS.md  PEAKUI_GUIDE.md  PEAKUI_README.md  commands.md  reference_app_guide.md  wasm_readiness.md
crates/peak-ui/docs/framework/: overview.md  technical_reference.md  verdict.md
crates/peak-ui/docs/roadmap/: framework_roadmap.md
crates/peak-ui/examples/: gui_demo.rs  hello_world.rs  showcase.rs  showcase_tui.rs  tui_demo.rs
crates/peak-ui/src/: alert.rs  assets.rs  atoms.rs  catalog.rs  console.rs  containers.rs  controls.rs  core.rs  forms.rs  gestures.rs  inputs.rs  layout.rs  lib.rs  main.rs  modifiers.rs  nav_split_view.rs  navigation.rs  scroll_view.rs  segmented_picker.rs  toolbar.rs  window_chrome.rs
crates/peak-ui/src/reference/: app.rs  mod.rs  model.rs
crates/peak-ui/src/reference/pages/: api_schema.rs  button.rs  community.rs  component_detail.rs  components.rs  customizations.rs  docks.rs  hooks.rs  introduction.rs  layout.rs  mod.rs  overview.rs  roadmap.rs  settings.rs  sizing.rs  typography.rs
crates/peak-ui/src/reference/pages/settings/: about.rs
crates/peak-ui/src/reference/views/: canvas.rs  component_doc.rs  content_view.rs  mod.rs  sidebar.rs  tabbar.rs
crates/peak-ui/src/views/: markdown.rs  mod.rs
docs/: commands.md  components.md  peak-ui-strategy.md  roadmap.md
docs/reference/: app_structure.md
peak-branding/: README.md
peak-compositor/: Cargo.toml
peak-deploy/: build.sh
peak-deploy/alpine/: Dockerfile  gen_iso.sh
peak-deploy/iso/: Dockerfile  build_internal.sh
peak-desktop/: convert_icon.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
peak-desktop/src-tauri/: Cargo.toml  tauri.conf.json
peak-desktop/src-tauri/capabilities/: default.json  shell.json
peak-intelligence/: Cargo.toml
peak-native/: Cargo.toml  INSTALL.md  colorize_icons.py  invert_logo.py
peak-native/assets/scripts/: invert_icon.py
peak-native/src/: app.rs  audio.rs  icons.rs  main.rs  registry.rs  styles.rs  theme.rs
peak-native/src/app/: init.rs  mod.rs  state.rs  update.rs  view.rs  view_desktop.rs  window_handling.rs
peak-native/src/apps/: browser.rs  browser_app.rs  editor.rs  explorer.rs  jukebox.rs  legacy_bridge.rs  library.rs  mod.rs  settings.rs  store.rs  terminal.rs  traits.rs  turntable.rs
peak-native/src/components/: app_grid.rs  app_switcher.rs  desktop.rs  desktop_container.rs  dock.rs  inspector.rs  menubar.rs  mod.rs  omnibar.rs  sidebar.rs  spaces_strip.rs  vapor_grid.rs  window_chrome.rs
peak-native/src/integrations/: appimage.rs  mod.rs
peak-native/src/pages/: cortex.rs  mod.rs  settings.rs
peak-native/src/systems/: image_loader.rs  mod.rs  scanner.rs  window_manager.rs
peak-native/src/utils/: assets.rs
scripts/: detect_wasm_leaks.sh  download-brand-icons.sh  wasm-leak-detector.py
(+94 files in other folders)
