[workspace]

members = [
    "crates/peak-intelligence",
    "crates/peak-core",
    "crates/peak-desktop",
    "crates/peak-mobile",
    "crates/peak-browser", "crates/peak-ui", "crates/peak-apps",
    "crates/peak-compositor", "crates/peak-shell-protocol",
    "crates/peak-system", "crates/peak-theme",
    "crates/peak-shell",
]
resolver = "2"

[workspace.metadata.vfs]
