[workspace]

members = [
    "crates/peak-intelligence",
    "crates/peak-core",
    "crates/modes/desktop",
    "crates/modes/mobile",
    "crates/modes/tv",
    "crates/modes/robot",
    "crates/modes/kiosk",
    "crates/modes/auto",
    "crates/modes/fireplace",
    "crates/modes/smarthome",
    "crates/peak-browser", "crates/peak-ui", "crates/peak-apps",
    "crates/peak-compositor", "crates/peak-shell-protocol",
    "crates/peak-system", "crates/peak-theme",
    "crates/peak-shell",
    "crates/peak-installer",
]
resolver = "2"

[workspace.metadata.vfs]
