[package]
name = "peak-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay = { version = "0.3", default-features = false, features = ["backend_winit", "renderer_gl"] }
winit = "0.29"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
smithay = { version = "0.3", features = ["backend_winit", "backend_drm", "backend_libinput", "renderer_gl"] }
udev = "0.7"
input = "0.8"
drm = "0.11"

