[package]
name = "peak-apps"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["canvas", "advanced", "image", "svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rodio = { version = "0.17", optional = true }
rand = "0.8"
portable-pty = { version = "0.8", optional = true }
peak-intelligence = { package = "peak-os-intelligence", path = "../peak-intelligence", default-features = false }
peak-core = { package = "peak-os-core", path = "../peak-core", default-features = false }
peak-ui = { path = "../../../PeakUI/framework", default-features = false }
peak-theme = { package = "peak-os-theme", path = "../peak-theme", default-features = false }
peak-ui-theme = { package = "peak-theme", path = "../../../PeakUI/crates/peak-theme", default-features = false }
tokio = { version = "1", features = ["full"], optional = true }
chrono = "0.4"
sysinfo = { version = "0.30", optional = true }
dirs = { version = "5.0", optional = true }
regex = "1.10"
opener = { version = "0.6", optional = true }
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"
directories = { version = "5.0", optional = true }
rfd = { version = "0.14", optional = true }
open = { version = "5.3.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Request", "RequestInit", "RequestMode",
    "Response",  "Window", "Headers"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[features]
default = ["native"]
native = [
    "iced/tokio",
    "rodio",
    "portable-pty",
    "tokio",
    "sysinfo",
    "dirs",
    "opener",
    "directories",
    "rfd",
    "open",
    "peak-intelligence/native",
    "peak-core/native",
    "peak-ui/tokio",
    "peak-theme/native",
    "iced/wgpu",
]
wasm = [
    "peak-intelligence/wasm",
    "peak-core/wasm",
    "peak-ui/wasm",
    "peak-theme/wasm",
]
