[package]
name = "peak-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
iced = { version = "0.14", default-features = false, features = ["advanced"] }
wgpu = { version = "22.1", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["native"]
native = ["iced/wgpu", "wgpu"]
wasm = []

[target.'cfg(target_os = "linux")'.dependencies]
smithay = { version = "0.7", default-features = false, features = ["backend_winit", "renderer_gl", "wayland_frontend", "backend_drm", "backend_libinput", "desktop"] }
wayland-server = "0.31"
calloop = "0.14"
udev = "0.9"
input = "0.9"
drm = "0.14"

