[package]
name = "peak-core"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "canvas", "advanced", "wgpu", "image", "svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"
regex = "1.10"
chrono = "0.4"
directories = "5.0"
dirs = "5.0"
sysinfo = "0.30"
opener = "0.6"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
peak-intelligence = { path = "../peak-intelligence", default-features = false }
