[package]
name = "peak-drop"
version = "0.1.0"
edition = "2021"
description = "AirDrop-like file sharing for PeakOS"

[dependencies]
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
