[package]
name = "peak-intelligence"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

once_cell = "1.18"
portable-pty = "0.8"
walkdir = "2.4"
