[package]
name = "peak-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["image", "svg", "advanced"] }
peak-core = { package = "peak-os-core", path = "../peak-core", default-features = false }
peak-ui = { path = "../../../PeakUI/framework", default-features = false }
peak-theme = { package = "peak-os-theme", path = "../peak-theme", default-features = false }
peak-system = { path = "../peak-system", default-features = false }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

[features]
default = ["native"]
native = [
    "peak-core/native",
    "peak-ui/tokio",
    "peak-theme/native",
    "peak-system/native",
]
wasm = [
    "peak-core/wasm",
    "peak-ui/wasm",
    "peak-theme/wasm",
    "peak-system/wasm",
]
