[package]
name = "peak-system"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["advanced"] }
peak-core = { path = "../peak-core", default-features = false }
sysinfo = { version = "0.30", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["native"]
native = ["sysinfo", "peak-core/native"]
wasm = ["peak-core/wasm"]
