[package]
name = "peak-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "peak-ui-showcase"
path = "src/main.rs"

[dependencies]
peak-core = { path = "../peak-core", default-features = false, features = ["wasm"] }
peak-theme = { path = "../peak-theme", default-features = false, features = ["wasm"] }
iced = { version = "0.13", features = ["canvas", "advanced", "wgpu", "image", "svg", "lazy"] }
iced_widget = { version = "0.13", features = ["lazy"] }
tiny-skia = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

[features]
default = ["tokio"]
tokio = ["iced/tokio"]
wasm = [
    "peak-core/wasm",
    "peak-theme/wasm"
]



