[package]
name = "peak-ui"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"

[[bin]]
name = "peak-ui-showcase"
path = "src/main.rs"

[dependencies]
peak-core = { path = "../peak-core", default-features = false }
peak-theme = { path = "../peak-theme", default-features = false }
peak-icons = { path = "../peak-icons" }
iced = { version = "0.13", default-features = false, features = ["canvas", "advanced", "image", "svg", "lazy"] }
iced_widget = { version = "0.13", features = ["lazy"] }
tiny-skia = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

[features]
default = ["native"]
native = [
    "tokio",
    "iced/wgpu",
    "peak-core/native",
    "peak-theme/native"
]
tokio = ["iced/tokio"]
wasm = [
    "iced/tiny-skia",
    "peak-core/wasm",
    "peak-theme/wasm"
]
