[package]
name = "peak-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "canvas", "advanced", "wgpu", "image", "svg"] }
rodio = "0.17"
rand = "0.8"
portable-pty = "0.8"
peak-intelligence = { path = "../../peak-intelligence" }
peak-core = { path = "../../peak-core" }
peak-apps = { path = "../../peak-apps" }
peak-ui = { path = "../../peak-ui" }
peak-shell = { path = "../../peak-shell" }
peak-theme = { path = "../../peak-theme" }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sysinfo = "0.30"
dirs = "5.0"
regex = "1.10"
opener = "0.6"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wry = "0.47"
tao = "0.30"
objc = "0.2"
tiny-skia = "0.11"
rfd = "0.14"  # File dialogs
open = "5.3.3"

[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell = "0.13"
wayland-client = "0.31"
