[package]
name = "peak-mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", default-features = false, features = ["advanced", "svg", "image"] }
peak-core = { path = "../../peak-core", default-features = false }
peak-ui = { path = "../../peak-ui", default-features = false }
peak-apps = { path = "../../peak-apps", default-features = false }
peak-theme = { path = "../../peak-theme", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"], optional = true }
chrono = "0.4"

[features]
default = ["native"]
native = ["iced/wgpu", "tokio", "peak-core/native", "peak-ui/native", "peak-apps/native", "peak-theme/native"]
wasm = ["peak-core/wasm", "peak-ui/wasm", "peak-apps/wasm", "peak-theme/wasm"]
