[package]
name = "peak-smarthome"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["advanced"] }
peak-core = { package = "peak-os-core", path = "../../peak-core", default-features = false }
peak-ui = { path = "../../../../PeakUI/framework", default-features = false }

[features]
default = ["native"]
native = ["iced/wgpu", "peak-core/native", "peak-ui/native"]
wasm = ["peak-core/wasm", "peak-ui/wasm"]
